Fixed graphs overlapping between 1460px screen width and 990px screen width.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,12 +41,14 @@ body {
 #pieChart {
     background-color:#e6f0ff;
     border-bottom-left-radius:25px; 
+    display:block;
 }
 
 /* Area Chart */
 #pieChart1 {
     background-color:#e6ffe6;
     border-bottom-right-radius:25px; 
+    display:block;
 }
 
 .col-lg-6.nopaddingPanel {
@@ -67,7 +69,7 @@ body {
     background-color: #e9ecef;
 }
 #recipe-title{
-    background-color: rgba(255, 243, 81, 0.5);
+    background-color: rgb(66,139,202);
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
 }
@@ -86,7 +88,7 @@ body {
     border-radius: 10px;
     height:auto;
     width: 75%;
-    border: 2px solid black;
+    border: 2px solid rgb(66,139,202);
 }
 #instructions-tab{
     padding-left:30px;
@@ -106,9 +108,57 @@ body {
     margin-right: 15px !important;
 }
 @media only screen and (max-width: 1460px) {
-    .col-mdlg-12{
+    /* This is where we need to break the graphs into one column*/
+    .selectedTabResults{
+        justify-content: center !important;
+    }
+    #catDiv{
+        
+        margin-right:10px !important;
         width:200% !important;
-        height:auto !important;
+    }
+    .catBack {
+        border-top-left-radius: 25px;
+        border-top-right-radius: 25px;
+        width:200% !important;
+    }
+    .areaBack {
+        border-top-right-radius: 0px;
+        width:200% !important;
+    }
+    #pieChart{
+        border-bottom-left-radius: 0px;
+        width:200% !important;
+    }
+    #pieChart1{
+        border-bottom-right-radius: 25px;
+        border-bottom-left-radius: 25px;
+        width:200% !important;
+    }
+}
+
+@media only screen and (max-width: 990px) {
+    #catDiv{
+        width:100% !important;
+        margin-right:0px !important;
+    }
+    .catBack {
+        border-top-left-radius: 25px;
+        border-top-right-radius: 25px;
+        width:100% !important;
+    }
+    .areaBack {
+        border-top-right-radius: 0px;
+        width:100% !important;
+    }
+    #pieChart{
+        border-bottom-left-radius: 0px;
+        width:100% !important;
+    }
+    #pieChart1{
+        border-bottom-right-radius: 25px;
+        border-bottom-left-radius: 25px;
+        width:100% !important;
     }
 }
 @media only screen and (max-width: 760px) {
@@ -117,29 +167,20 @@ body {
     }
     #pieChart{
         display:none;
+        visibility: hidden;
+        height:0px;
     }
     #pieChart1{
         display:none;
+        visibility: hidden;
+        height:0px;
+    }
+    svg{
+        visibility: hidden;
     }
     .areaBack {
         border-bottom-right-radius: 25px;
         border-bottom-left-radius: 25px;
     }
     
-}
-@media only screen and (max-width: 990px) {
-    .catBack {
-        border-top-left-radius: 25px;
-        border-top-right-radius: 25px;
-    }
-    .areaBack {
-        border-top-right-radius: 0px;
-    }
-    #pieChart{
-        border-bottom-left-radius: 0px;
-    }
-    #pieChart1{
-        border-bottom-right-radius: 25px;
-        border-bottom-left-radius: 25px;
-    }
 }
